--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ script:
   - git fetch --all
 # ignore master, it differs due to this file
   - REFS=$(git ls-remote -h upstream | cut -f2 | grep -v refs/heads/master)
-  - for i in $REFS; do
+  - |
+    for i in $REFS; do
       UPSTREAM_SHA1=$(git ls-remote upstream $i | cut -f1);
       MINE_SHA1=$(git ls-remote mine $i | cut -f1);
       echo "upstream $i $UPSTREAM_SHA1";
