--- a/.travis.yml
+++ b/.travis.yml
@@ -15,25 +15,9 @@ script:
       echo "mine     $i $MINE_SHA1";
       if [ "$UPSTREAM_SHA1" != "$MINE_SHA1" ]; then
         BRANCH=$(basename $i);
-        echo "language: generic" > .travis.yml.tmp;
-        grep -A99 "dep""loy" .travis.yml >> .travis.yml.tmp;
-        git checkout -t upstream/$BRANCH;
-        git push mine +$BRANCH 2>/dev/null;
-        mv .travis.yml.tmp .travis.yml;
-        git add .travis.yml;
         TAGNAME=$BRANCH-$(date +%F);
-        git config user.name "Tony Kelman";
-        git config user.email "tony@kelman.net";
-        git commit -m "$TAGNAME: add .travis.yml";
+        git checkout -t upstream/$BRANCH;
         git tag $TAGNAME;
-        git push mine $TAGNAME 2>/dev/null;
+        git push mine +$BRANCH $TAGNAME 2>/dev/null;
       fi;
     done
-deploy:
-  provider: releases
-  api_key: "$TOKEN"
-  file: "docker/*.tar.*"
-  file_glob: true
-  skip_cleanup: true
-  on:
-    tags: true
